--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
         <input type="text" id="input-box" placeholder="Add your To-Do">
         <button>Add</button>
       </div>
+      <ul id="list-containe">
+        <!-- <li class="checked">Task 1</li>
+        <li>Task 2</li>
+        <li>Task 3</li> -->
+      </ul>
     </div>
 
   </div>
